Kubernetes-10/k8s-network-policy-app/k8s-network-policy-app/03-test-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod
  namespace: app
spec:
  containers:
  - name: network-multitool
    image: praqma/network-multitool
    command: ["/bin/sh"]
    args: ["-c", "sleep 3600"]
